# birthday-filter

./: README.md  pyproject.toml
birthday_filter/: __init__.py  __main__.py  config.py
